--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
+    "react-interval": "^2.0.2",
     "react-redux": "^5.0.6",
     "react-redux-toastr": "^7.1.6",
     "react-router-bootstrap": "^0.24.4",
