--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-select": "^1.1.0",
     "react-table": "^6.7.5",
     "redux": "^3.7.2",
     "redux-localstorage": "^0.4.1",
